@@ -30,8 +30,10 @@ namespace wxMSWMessageDialog
     class wxMSWTaskDialogConfig
     {
     public:
+        enum { MAX_BUTTONS = 4  };
+
         wxMSWTaskDialogConfig()
-            : buttons(new TASKDIALOG_BUTTON[3]),
+            : buttons(new TASKDIALOG_BUTTON[MAX_BUTTONS]),
               parent(NULL),
               iconId(0),
               style(0),
@@ -53,6 +55,7 @@ namespace wxMSWMessageDialog
         wxString btnNoLabel;
         wxString btnOKLabel;
         wxString btnCancelLabel;
+        wxString btnHelpLabel;
 
         // Will create a task dialog with it's paremeters for it's creation
         // stored in the provided TASKDIALOGCONFIG parameter.
